[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netpuppy"
version = "0.1.0"
description = "netcat created in python"
readme = "README.md"
keywords = ["python", "package"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Security"
]

[project.optional-dependencies]
dev = ["black", "mypy", "pytest", "pytest-cov", "build"]

[project.scripts]
netpuppy = "netpuppy.__main__:lil_wayne"

[project.urls]
homepage = "https://github.com/TrshPuppy/netpuppy"
repository = "https://github.com/TrshPuppy/netpuppy.git"

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
check_untyped_defs = true

disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true

disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

no_implicit_reexport = true

warn_return_any = true

[tool.pytest]
log_cli = 0
log_cli_level = "INFO"